# Optimizing-Federated-Learning-for-Privacy-Enhanced-Disease-Classification

./: .gitignore  .gitmodules  README.md
Framework/: requirements.txt
Framework/client/: client_logic.py  ml_client.py  ml_split.py  ml_vector_pb2.py  ml_vector_pb2_grpc.py
Framework/client/dp/: diffprivacy.py
Framework/client/resnet18/: ml_eval.py  ml_modeltraining.py  ml_preprocess.py  ml_resnet18.py
Framework/proto/: ml_vector.proto
Framework/server/: interceptor.py  logic.py  ml_server.py  ml_vector_pb2.py  ml_vector_pb2_grpc.py
Preprocess/: CMakeLists.txt
Preprocess/include/: fileLoader.hpp  preprocess.hpp  splitter.hpp
Preprocess/src/: fileLoader.cpp  main.cpp  preprocess.cpp  splitter.cpp
client/: client_logic.py  ml_client.py
client/dp/: diffprivacy.py
client/resnet18/: ml_modeltraining.py  ml_preprocess.py  ml_resnet18.py
server/: logic.py  ml_server.py
